correct max-height calculation on toggle to prevent content clipping

--- a/src/quartz/styles/base.scss
+++ b/src/quartz/styles/base.scss
@@ -455,8 +455,6 @@ pre {
     counter-reset: line;
     counter-increment: line 0;
     display: grid;
-    padding: 0.5rem 0;
-    overflow-x: auto;
 
     & [data-highlighted-chars] {
       background-color: var(--highlight);
@@ -509,28 +507,17 @@ p {
   line-height: 1.6rem;
 }
 
-.table-container {
-  overflow-x: auto;
-
-  & > table {
-    margin: 1rem;
-    padding: 1.5rem;
-    border-collapse: collapse;
-
-    th,
-    td {
-      min-width: 75px;
-    }
-
-    & > * {
-      line-height: 2rem;
-    }
+table {
+  margin: 1rem;
+  padding: 1.5rem;
+  border-collapse: collapse;
+  & > * {
+    line-height: 2rem;
   }
 }
 
 th {
-  text-align: left;
-  padding: 0.4rem 0.7rem;
+  padding: 0.4rem 1rem;
   border-bottom: 2px solid var(--gray);
 }
 
@@ -549,7 +536,6 @@ img {
   max-width: 100%;
   border-radius: 5px;
   margin: 1rem 0;
-  content-visibility: auto;
 }
 
 p > img + em {
@@ -572,28 +558,20 @@ video {
 }
 
 .spacer {
-  flex: 2 1 auto;
-}
-
-div:has(> .overflow) {
-  max-height: 100%;
-  overflow-y: hidden;
+  flex: 1 1 auto;
 }
 
 ul.overflow,
 ol.overflow {
-  max-height: 100%;
+  max-height: 400;
   overflow-y: auto;
-  width: 100%;
-  margin-bottom: 0;
 
   // clearfix
   content: "";
   clear: both;
 
-  & > li.overflow-end {
-    height: 0.5rem;
-    margin: 0;
+  & > li:last-of-type {
+    margin-bottom: 30px;
   }
 
   &.gradient-active {
